--- a/project1/styles.css
+++ b/project1/styles.css
@@ -88,6 +88,13 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: all 0.7s;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color: var(--very-dark-blue);
 }
 
 button img{
