--- a/project7/styles.css
+++ b/project7/styles.css
@@ -19,8 +19,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 1rem;
     height: 100vh;
-    width: 100vw;
 }
 
 .wrapper{
@@ -55,10 +55,18 @@
 .cards button{
     padding: 0.9rem 1.9rem;
     border-radius: 5rem;
-    border: 0rem;
+    border: 2px solid var(--very-light-gray);
     font-family: 'Lexend Deca';
     background-color: var(--very-light-gray);
     font-size: 0.9rem;
+
+    transition: all 0.6s;
+    cursor: pointer;
+}
+
+.cards button:hover{
+    background-color: transparent;
+    color: var(--very-light-gray)
 }
 
 .sedans {
@@ -88,6 +96,22 @@
 }
 
 
+@media(max-width:50rem){
+    .container{
+        height: 100%;
+    }
+    .wrapper{
+        display: flex;
+        flex-direction: column;
+    }
 
+    .sedans{
+        border-radius: 0rem;
+    }
+
+    .luxury{
+        border-radius: 0rem;
+    }
+}
 
 
